# pyri-robot-motion-program

./: README.md  pyproject.toml  setup.py
docs/: motion_program_opt_gui.md  motion_program_robot_blocks_functions.md
src/pyri/robotics_motion_program/: blockly.py  robdef.py  sandbox_functions.py  util.py  webui_server.py
src/pyri/robotics_motion_program/motion_program_opt_service/: __main__.py  motion_program_generation_alg.py  motion_program_update_alg.py  opt_script_util.py  pyri_robotics_motion_program_opt_service_default_info.yml  redundancy_resolution_alg.py  tech.pyri.robotics.motion_program_opt.robdef
src/pyri/robotics_motion_program/motion_program_opt_service/opt_scripts/: greedy_fitting_opt.py  motion_program_generation.py  motion_program_update.py  redundancy_resolution.py
test/: test_blockly.py
test/test_pyri_robotics_motion_program/: test_blockly.py
